hotfix: solved issue with logo not showing

--- a/client/src/styles/formInputs.css
+++ b/client/src/styles/formInputs.css
@@ -18,7 +18,7 @@ h2 {
   color: var(--bs-light);
 }
 
-span {
+input ~ span {
   color: red;
   font-size: 12px;
   padding: 3px;
